[0204-2346] 썸네일 영역 디자인 적용

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,7 @@
 .menuWrapper {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
   .left {
     border: 1px solid black;
     max-height: 70px;
