--- a/src/templates/Thumbnail/Thumbnail.module.scss
+++ b/src/templates/Thumbnail/Thumbnail.module.scss
@@ -3,20 +3,32 @@
   flex-direction: row;
   align-items: center;
   img {
-    max-width: 100px;
+    width: 100px;
     height: 100px;
+    margin-right: 30px;
   }
   .right {
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    align-items: flex-start;
+    justify-content: center;
+    * {
+      margin-bottom: 10px;
+    }
+    h3 {
+      font-size: x-large;
+      font-weight: bold;
+    }
+    .entry {
+      font-size: large;
+    }
     .tags {
       * {
         margin-right: 10px;
       }
       .tag {
         display: inline;
+        color: #782f2e;
       }
     }
   }
